[package]
name = "helios_nif"
version = "0.1.0"
edition = "2024"

[lib]
name = "helios_nif"
path = "src/lib.rs" 
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
rustler = "0.29.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.28", features = ["full"] }
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
helios = { git = "https://github.com/a16z/helios", version = "0.8.8" }
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
alloy = "1.0.9"
hex = "0.4.3"
