[package]
name = "my_device"
version = "0.1.0"
edition = "2024"

[lib]
name = "my_device"
path = "src/lib.rs" 
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
rustler = "0.29.1"
ureq = {version = "3.0.11", features = ["json"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
