[package]
name = "s3-nif"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.96.0"
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
hyper = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "1.5"
lru = "0.12"
parking_lot = "0.12"
uuid = { version = "1.0", features = ["v4"] }

[[bin]]
name = "s3-nif"
path = "src/bin/main.rs"